# juiced

./: .gitignore  Cargo.toml  LICENSE  deploy
.cargo/: config
docs/: evse-spec.md
juiced/: Cargo.toml
juiced-status/: Cargo.toml
juiced-status/src/: lib.rs
juiced-web/: Cargo.toml  build.rs
juiced-web-ui/: Cargo.toml  Trunk.toml  index.html
juiced-web-ui/assets/: app.css
juiced-web-ui/src/: main.rs
juiced-web/examples/: mock.rs
juiced-web/src/: assets.rs  lib.rs
juiced/src/: main.rs
juicelib/: Cargo.toml
juicelib/src/: adc.rs  evse.rs  lib.rs  peripherals.rs  pilot.rs  sensors.rs
juicelib/src/mcp/: device.rs  lib.rs  mod.rs
mcp3xxx-eh/: Cargo.toml
mcp3xxx-eh/src/: analog_in.rs  lib.rs  mcp3002.rs  mcp3xxx.rs
mcp3xxx-eh/tests/: lib.rs
