[package]
name = "juiced-web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
juiced-status = { path = "../juiced-status" }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
