[package]
name = "juicelib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3"
rust_gpiozero = "0.2"
spidev = "0.6"
rppal = "0.14"
rand = "0.8"
rust-fsm = { version = "0.6", features = ["dsl", "std"] }
crossbeam-channel = "0.5"
lazy_static = "1.4"
error-stack = "0.4"
log = "0.4"
statrs = "0.16.0"

